--- a/src/app/feature/main/main.component.html
+++ b/src/app/feature/main/main.component.html
@@ -14,9 +14,9 @@
 
 
   <ngb-accordion #acc="ngbAccordion"
-                 activeIds="ngb-panel-0" >
+                 activeIds="ngb-panel-0">
     <ngb-panel title="Собираете ли вы подарочные боксы?">
-      <ng-template ngbPanelContent  class="border-0 pb-0">
+      <ng-template ngbPanelContent class="border-0 pb-0">
         Да, у нас есть такая услуга. Мы можем собрать подарочный бокс на любой вкус, объем и стоимость!
       </ng-template>
     </ngb-panel>
@@ -46,9 +46,10 @@
   </ngb-accordion>
 
   <div *ngIf="showPopUp" class="pop-up-bg">
-    <div class="pop-up pt-5 fw-bold">
-      <div>Посмотрите наши чайные коллекции!</div>
-      <button routerLink="/catalog" class="btn btn-primary mt-5 hvr-glow pop-up-button">Смотреть</button>
+    <div class="pop-up p-2 fw-bold">
+      <div (click)=closePopUp() class="text-end hvr-glow close">✖</div>
+      <div class="mt-2">Посмотрите наши чайные коллекции!</div>
+        <button routerLink="/catalog" class="btn btn-primary mt-5 hvr-glow pop-up-button">Смотреть</button>
     </div>
   </div>
 </div>
