--- a/src/app/feature/order/order.component.html
+++ b/src/app/feature/order/order.component.html
@@ -1,7 +1,7 @@
 <div class="form wow animate__backInUp" id="form">
   <div class="col-lg-6  m-auto">
     <h2 class="text-center my-5 fw-bold" *ngIf="hideFormHideText">Сделать заказ</h2>
-    <h2 class="text-center my-5 fw-bold h-100 " *ngIf="hideTextShowTnx">Спасибо за заказ!</h2>
+    <h2 class="text-center my-5 fw-bold h-100 tnx" *ngIf="hideTextShowTnx">Спасибо за заказ!</h2>
 
     <form class="row g-3 my-5" [formGroup]="checkoutForm" *ngIf="hideFormHideText">
       <div class="col-md-4">
