--- a/src/app/feature/order/order.component.scss
+++ b/src/app/feature/order/order.component.scss
@@ -10,7 +10,7 @@ input.ng-invalid.ng-touched {
 
 .tnx {
   width: 100%;
-  height: 100%;
   text-align: center;
   vertical-align: center;
+  height: 100vh
 }
