--- a/src/app/feature/main/main.component.scss
+++ b/src/app/feature/main/main.component.scss
@@ -1,9 +1,9 @@
 .top-50 {
-  top: 30%!important;
+  top: 30% !important;
 }
 
 .start-50 {
-  left: 13%!important;
+  left: 13% !important;
 }
 
 .pop-up-bg {
@@ -33,5 +33,5 @@
 }
 
 .close {
-
+  cursor: pointer;
 }
