changed main html

--- a/src/app/feature/main/main.component.html
+++ b/src/app/feature/main/main.component.html
@@ -2,7 +2,7 @@
   <div class="slider my-5 py-4 wow animate__fadeIn">
     <div class="slick-slider position-relative">
       <a class="slider-image" href="#">
-        <img src="../../../assets/images/screen1.png" alt="1">
+        <img src="/assets/images/screen1.png" alt="1">
       </a>
       <div class="slider-text position-absolute top-50 start-50">
         <h1 class="fw-bold">Скидки на травянные чаи</h1>
